tests/base/parser/bad/cmodule-field-id-colon-cid-eq-hexlit-with.scilla
scilla_version 0

contract Test
()

(* unnecessary semicolon *)

field truth : Bool = True ;
